--- a/ng-app/src/app/event/event-view/event-view.component.css
+++ b/ng-app/src/app/event/event-view/event-view.component.css
@@ -2,6 +2,7 @@
     box-shadow: -1px 2px 8px #ccc;
     padding: 5px 10px;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .btn-sm {
@@ -11,4 +12,9 @@
 
 .btn-group button {
   margin: 0 5px;
+}
+
+button.active {
+  background-color: #595959;
+  color: #ffffff;
 }
