--- a/ng-app/src/app/event/event-plan-form/event-plan-form.component.html
+++ b/ng-app/src/app/event/event-plan-form/event-plan-form.component.html
@@ -1,1 +1,1 @@
-<app-standard-form title="Event Plan" [fields]="fields" domainName="event-plan"></app-standard-form>
+<app-standard-form title="Event Plan" [fields]="fields" domainName="event-plan" [includes]="includes"></app-standard-form>
