event plan action `duplicate event`

--- a/ng-app/src/app/event/event-plan-list/event-plan-list.component.html
+++ b/ng-app/src/app/event/event-plan-list/event-plan-list.component.html
@@ -1,1 +1,7 @@
-<app-standard-list domainName="event-plan" title="Event Plan" [columns]="columns" [filterList]="filterList"></app-standard-list>
+<app-standard-list 
+    domainName="event-plan" 
+    title="Event Plan" 
+    [columns]="columns" 
+    [filterList]="filterList"
+    [actions]="actions">
+</app-standard-list>
