--- a/ng-app/src/app/provider/receipt-form/receipt-form.component.html
+++ b/ng-app/src/app/provider/receipt-form/receipt-form.component.html
@@ -1,1 +1,7 @@
-<app-standard-form title="Receipt" domainName="receipt" [fields]="fields" [includes]="['provider','supplier-invoice']" [(dataSource)]="formData"></app-standard-form>
+<app-standard-form 
+    title="Receipt" 
+    domainName="receipt" 
+    [fields]="fields" 
+    [includes]="includes" 
+    [(dataSource)]="formData">
+</app-standard-form>
