--- a/ng-app/src/app/provider/receipt-form/receipt-form.component.html
+++ b/ng-app/src/app/provider/receipt-form/receipt-form.component.html
@@ -3,5 +3,8 @@
     domainName="receipt" 
     [fields]="fields" 
     [includes]="includes" 
-    [(dataSource)]="formData">
+    [(dataSource)]="formData"
+    (afterSubmit)="afterSubmit($event)">
 </app-standard-form>
+
+<pre>{{ formData | json }}</pre>
