--- a/ng-app/src/app/inventory/stock-transaction-list/stock-transaction-list.component.html
+++ b/ng-app/src/app/inventory/stock-transaction-list/stock-transaction-list.component.html
@@ -1,1 +1,7 @@
-<app-standard-list title="Stock Transaction" domainName="stock-transaction" [columns]="columns" [filterList]="filterList"></app-standard-list>
+<app-standard-list 
+    title="Stock Transaction" 
+    domainName="stock-transaction" 
+    [columns]="columns" 
+    [includes]="includes"
+    [filterList]="filterList">
+</app-standard-list>
