--- a/ng-app/src/app/provider/receipt-form/receipt-form.component.html
+++ b/ng-app/src/app/provider/receipt-form/receipt-form.component.html
@@ -1,10 +1,11 @@
-<app-standard-form 
-    title="Receipt" 
-    domainName="receipt" 
-    [fields]="fields" 
-    [includes]="includes" 
+<app-standard-form
+    title="Receipt"
+    domainName="receipt"
+    [fields]="fields"
+    [includes]="includes"
     [(dataSource)]="formData"
-    (afterSubmit)="afterSubmit($event)">
+    (afterSubmit)="afterSubmit($event)"
+>
 </app-standard-form>
 
-<pre>{{ formData | json }}</pre>
+<!-- <pre>{{ formData | json }}</pre> -->
