--- a/ng-app/src/app/provider/supplier-invoice-form/supplier-invoice-form.component.html
+++ b/ng-app/src/app/provider/supplier-invoice-form/supplier-invoice-form.component.html
@@ -1,1 +1,7 @@
-<app-standard-form title="Supplier Invoice" domainName="supplier-invoice" [fields]="fields" [includes]="['provider']"></app-standard-form>
+<app-standard-form
+    title="Supplier Invoice"
+    domainName="supplier-invoice"
+    [fields]="fields"
+    [includes]="['provider']"
+    [(dataSource)]="formData"
+></app-standard-form>
