--- a/ng-app/src/app/provider/supplier-invoice-list/supplier-invoice-list.component.html
+++ b/ng-app/src/app/provider/supplier-invoice-list/supplier-invoice-list.component.html
@@ -5,4 +5,5 @@
     [filterList]="filterList"
     [includes]="['provider', 'supplierInvoice']"
     [actions]="actions"
+    #standardList
 ></app-standard-list>
