--- a/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
+++ b/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
@@ -9,6 +9,19 @@
       [required]="field.required"></textarea>
   </mat-form-field>
 
+  <mat-form-field *ngSwitchCase="'textarea-autocomplete'">
+    <input type="text" matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
+      [required]="field.required" [matAutocomplete]="auto" />
+    <textarea matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
+      [required]="field.required" [matAutocomplete]="textareaAutocomplete"></textarea>
+
+    <mat-autocomplete #textareaAutocomplete="matAutocomplete" [displayWith]="displayFn"
+      (optionSelected)="field.refChange && field.refChange($event, formData)">
+      <mat-option *ngFor="let option of (field.refOptions | filterOptions: formData[field.name]: field.refName)"
+        [value]="option">{{ option[field.refName] }}</mat-option>
+    </mat-autocomplete>
+  </mat-form-field>
+
   <mat-form-field *ngSwitchCase="'number'">
     <input matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
       [required]="field.required" />
@@ -43,11 +56,12 @@
 
   <mat-form-field *ngSwitchCase="'ref'">
     <input type="text" matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
-      [required]="field.required" [matAutocomplete]="auto" />
+      [required]="field.required" [matAutocomplete]="textboxAutocomplete" />
 
-    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn"
+    <mat-autocomplete #textboxAutocomplete="matAutocomplete" [displayWith]="displayFn"
       (optionSelected)="field.refChange && field.refChange($event, formData)">
-      <mat-option *ngFor="let option of (field.refOptions | filterOptions: formData[field.name]: field.refName)" [value]="option">{{ option[field.refName] }}</mat-option>
+      <mat-option *ngFor="let option of (field.refOptions | filterOptions: formData[field.name]: field.refName)"
+        [value]="option">{{ option[field.refName] }}</mat-option>
     </mat-autocomplete>
   </mat-form-field>
 
