update solution, remove onPush strategy

--- a/ng-app/src/app/inventory/stock-item-form/stock-item-form.component.html
+++ b/ng-app/src/app/inventory/stock-item-form/stock-item-form.component.html
@@ -1,1 +1,1 @@
-<app-standard-form title="Stock Item" domainName="stock-item" [fields]="fields" [includes]="['category']"></app-standard-form>
+<app-standard-form title="Stock Item" domainName="stock-item" [fields]="fields" [includes]="includes"></app-standard-form>
