--- a/ng-app/src/app/provider/supplier-invoice-form/supplier-invoice-form.component.html
+++ b/ng-app/src/app/provider/supplier-invoice-form/supplier-invoice-form.component.html
@@ -2,6 +2,6 @@
     title="Supplier Invoice"
     domainName="supplier-invoice"
     [fields]="fields"
-    [includes]="['provider']"
+    [includes]="includes"
     [(dataSource)]="formData"
 ></app-standard-form>
