--- a/ng-app/src/app/provider/supplier-invoice-list/supplier-invoice-list.component.html
+++ b/ng-app/src/app/provider/supplier-invoice-list/supplier-invoice-list.component.html
@@ -3,7 +3,7 @@
     domainName="supplier-invoice"
     [columns]="columns"
     [filterList]="filterList"
-    [includes]="['provider', 'supplierInvoice']"
+    [includes]="includes"
     [actions]="actions"
     #standardList
 ></app-standard-list>
