--- a/ng-app/src/app/provider/payment-voucher-form/payment-voucher-form.component.html
+++ b/ng-app/src/app/provider/payment-voucher-form/payment-voucher-form.component.html
@@ -1,2 +1,2 @@
-<app-standard-form title="Payment Voucher" domainName="payment-voucher" [fields]="fields" [includes]="includes"></app-standard-form>
+<app-standard-form title="Payment Voucher" domainName="payment-voucher" [fields]="fields" [includes]="includes" [(dataSource)]="formData"></app-standard-form>
 
