--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -20,6 +20,13 @@
         <label class="mat-body-strong">Venue</label>
         <div class="mat-body">{{ eventPlan.venue }}</div>
       </div>
+      <div class="view-field">
+        <label class="mat-body-strong">Status</label>
+        <div class="mat-body">{{ eventPlan.status }}</div>
+      </div>
+      <div class="action-group">
+        <button class="btn-sm" mat-raised-button color="primary">Edit</button>
+      </div>
     </div>
   </mat-tab>
   <mat-tab label="Resources">
