--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
@@ -2,7 +2,7 @@
     padding: 10px;
 }
 
-.view-field:nth-of-type(n+2) {
+.view-field:nth-of-type(n + 2) {
     margin-top: 10px;
 }
 
@@ -12,4 +12,13 @@
 
 .btn-sm {
     line-height: 30px;
+}
+
+.action-group button {
+    margin: 0 5px;
+}
+
+button.active {
+    background-color: #595959;
+    color: #ffffff;
 }
