--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -13,8 +13,10 @@
       </div>
       <div class="view-field">
         <label class="mat-body-strong">Date/Time</label>
-        <div class="mat-body">{{ eventPlan.dateFrom | date: 'dd-MM-yyyy' }} - {{ eventPlan.dateTo | date: 'dd-MM-yyyy' }}</div>
-        <div class="mat-body">{{ eventPlan.timeFrom | date: 'HH:mm a' }} - {{ eventPlan.timeTo | date: 'HH:mm a' }}</div>
+        <div class="mat-body">{{ eventPlan.dateFrom | date: 'dd-MM-yyyy' }} -
+          {{ eventPlan.dateTo | date: 'dd-MM-yyyy' }}</div>
+        <div class="mat-body">{{ eventPlan.timeFrom | date: 'HH:mm a' }} - {{ eventPlan.timeTo | date: 'HH:mm a' }}
+        </div>
       </div>
       <div class="view-field">
         <label class="mat-body-strong">Venue</label>
@@ -31,7 +33,21 @@
   </mat-tab>
   <mat-tab label="Resources">
     <div class="tab-body">
-      <p>Event Resource Info</p>
+      <div class="mat-subheading-1">Services
+        <button mat-icon-button color="primary">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </div>
+      <div class="mat-subheading-1">Facilities
+        <button mat-icon-button>
+          <mat-icon>edit</mat-icon>
+        </button>
+      </div>
+      <div class="mat-subheading-1">Stock Items
+        <button mat-icon-button>
+          <mat-icon>edit</mat-icon>
+        </button>
+      </div>
     </div>
   </mat-tab>
   <mat-tab label="Processes">
