--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -1,6 +1,7 @@
 <span class="mat-display-1">View Event Plan ({{ eventPlan.code }})</span>
 
 <mat-tab-group>
+  <!-- Tab1: Basis Info -->
   <mat-tab label="Basis Info">
     <div class="tab-body">
       <div class="view-field">
@@ -26,33 +27,122 @@
         <label class="mat-body-strong">Status</label>
         <div class="mat-body">{{ eventPlan.status }}</div>
       </div>
+      <div class="view-field">
+        <label class="mat-body-strong">Markup Rate (%)</label>
+        <div class="mat-body">{{ (eventPlan.markupRate || 0) | number: '1.0-2' }}%</div>
+      </div>
+      <div class="view-field">
+        <label class="mat-body-strong">Remarks</label>
+        <div class="mat-body">{{ eventPlan.remarks }}</div>
+      </div>
       <div class="action-group">
-        <button class="btn-sm" mat-raised-button color="primary">Edit</button>
+        <button class="btn-sm" routerLink="/event-plan/edit/{{eventPlan._id}}" mat-raised-button
+          color="primary">Edit</button>
       </div>
     </div>
   </mat-tab>
+  <!-- Tab2: Resources -->
   <mat-tab label="Resources">
     <div class="tab-body">
       <div class="mat-subheading-1">Services
-        <button mat-icon-button color="primary">
+        <button mat-icon-button color="primary" (click)="addItemToEvent('providerService', 'services')">
           <mat-icon>edit</mat-icon>
         </button>
+        <p *ngIf="eventPlan.services && eventPlan.services.length === 0">
+          No service yet.
+        </p>
+        <ng-container *ngIf="eventPlan.services && eventPlan.services.length > 0">
+          <p *ngFor="let service of eventPlan.services">
+            {{ service?.name }} x {{ service?.quantity }}
+            {{ service?.unit }}
+            ({{ service?.unitPrice * service?.quantity | currency: 'RM' }})
+          </p>
+        </ng-container>
       </div>
       <div class="mat-subheading-1">Facilities
-        <button mat-icon-button>
+        <button mat-icon-button color="primary" (click)="addItemToEvent('providerFacility', 'facilities')">
           <mat-icon>edit</mat-icon>
         </button>
+        <p *ngIf="eventPlan.facilities && eventPlan.facilities.length === 0">
+          No facility yet.
+        </p>
+        <ng-container *ngIf="eventPlan.facilities && eventPlan.facilities.length > 0">
+          <p *ngFor="let facility of eventPlan.facilities">
+            {{ facility?.name }} x {{ facility?.quantity }}
+            {{ facility?.unit }}
+            ({{ facility?.unitPrice * facility?.quantity | currency: 'RM' }})
+          </p>
+        </ng-container>
       </div>
       <div class="mat-subheading-1">Stock Items
-        <button mat-icon-button>
+        <button mat-icon-button color="primary" (click)="addItemToEvent('stockItem', 'stockItems')">
           <mat-icon>edit</mat-icon>
         </button>
+        <p *ngIf="eventPlan.stockItems && eventPlan.stockItems.length === 0">
+          No stock item yet.
+        </p>
+        <ng-container *ngIf="eventPlan.stockItems && eventPlan.stockItems.length > 0">
+          <p *ngFor="let stockItem of eventPlan.stockItems">
+            {{ stockItem?.name }} x {{ stockItem?.quantity }}
+            {{ stockItem?.unit }}
+            ({{ stockItem?.unitPrice * stockItem?.quantity | currency: 'RM' }})
+          </p>
+        </ng-container>
       </div>
     </div>
   </mat-tab>
+  <!-- Tab3: Processes -->
   <mat-tab label="Processes">
     <div class="tab-body">
       <p>Event Process Info</p>
+    </div>
+  </mat-tab>
+  <!-- Tab4: Form -->
+  <mat-tab label="Form">
+    <div class="tab-body">
+      <p>Event Form Info</p>
+    </div>
+  </mat-tab>
+  <!-- Tab5: Cost & Profit -->
+  <mat-tab label="Cost & Profit">
+    <div class="tab-body">
+      <p>Event Cost & Profit Info</p>
+      <div class="mat-subheading-1 info-group">Costs Summary
+        <mat-divider></mat-divider>
+        <div class="info-item">
+          <div class="mat-body">Services:</div>
+          <div class="mat-body">{{ eventPlan.services | getTotal: 'unitPrice': 'quantity' | currency: 'RM ' }}</div>
+        </div>
+        <div class="info-item">
+          <div class="mat-body">Facilities:</div>
+          <div class="mat-body">{{ eventPlan.facilities | getTotal: 'unitPrice': 'quantity' | currency: 'RM ' }}</div>
+        </div>
+        <div class="info-item">
+          <div class="mat-body">Stock Items:</div>
+          <div class="mat-body">{{ eventPlan.stockItems | getTotal: 'unitPrice': 'quantity' | currency: 'RM ' }}</div>
+        </div>
+        <mat-divider></mat-divider>
+        <div class="info-item">
+          <div class="mat-body-strong">Total Costs:</div>
+          <div class="mat-body-strong">
+            {{ ((eventPlan.services | getTotal: 'unitPrice': 'quantity') + (eventPlan.facilities | getTotal: 'unitPrice': 'quantity') + (eventPlan.stockItems | getTotal: 'unitPrice': 'quantity')) | currency: 'RM ' }}
+          </div>
+        </div>
+        <div class="info-item">
+          <div class="mat-body-strong">Total Profit ({{ eventPlan.markupRate | number: '1.0-2' }}%):</div>
+          <div class="mat-body-strong">
+            {{ ((eventPlan.services | getTotal: 'unitPrice': 'quantity') + (eventPlan.facilities | getTotal: 'unitPrice': 'quantity') + (eventPlan.stockItems | getTotal: 'unitPrice': 'quantity')) * eventPlan.markupRate / 100 | currency: 'RM ' }}
+          </div>
+        </div>
+        <mat-divider></mat-divider>
+        <div class="info-item">
+          <div class="mat-body-strong">Total Price:</div>
+          <div class="mat-body-strong">
+            {{ ((eventPlan.services | getTotal: 'unitPrice': 'quantity') + (eventPlan.facilities | getTotal: 'unitPrice': 'quantity') + (eventPlan.stockItems | getTotal: 'unitPrice': 'quantity')) * ((eventPlan.markupRate / 100) + 1) | currency: 'RM ' }}
+          </div>
+        </div>
+      </div>
+      <mat-divider></mat-divider>
     </div>
   </mat-tab>
 </mat-tab-group>
